# reqless

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: Dep.ts  collectDeps.ts  generateCode.ts  main.rs  reqless.ts
test/empty-module/: main.ts
test/ts-resolution/: main.ts
