[package]
name = "reqless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version="0.18.6", features=["tty-emitter"] }
swc_ecma_parser = { version="0.104.0", features = ["typescript"] }
swc_ecma_visit = "0.64.0"